@@ -11,30 +11,52 @@ package org.elasticsearch.ingest.geoip;
 import com.maxmind.geoip2.DatabaseReader;
 
 import org.elasticsearch.common.CheckedSupplier;
+import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.PathUtils;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.RandomDocumentPicks;
+import org.elasticsearch.ingest.geoip.Database.Property;
 import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Supplier;
 
 import static org.elasticsearch.ingest.IngestDocumentMatcher.assertIngestDocument;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasEntry;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
 
 public class GeoIpProcessorTests extends ESTestCase {
+
+    private static final Set<Property> ALL_PROPERTIES = Set.of(Property.values());
+
+    public void testDatabasePropertyInvariants() {
+        // the city database is like a specialization of the country database
+        assertThat(Sets.difference(Database.Country.properties(), Database.City.properties()), is(empty()));
+        assertThat(Sets.difference(Database.Country.defaultProperties(), Database.City.defaultProperties()), is(empty()));
+
+        // the isp database is like a specialization of the asn database
+        assertThat(Sets.difference(Database.Asn.properties(), Database.Isp.properties()), is(empty()));
+        assertThat(Sets.difference(Database.Asn.defaultProperties(), Database.Isp.defaultProperties()), is(empty()));
+
+        // the enterprise database is like everything joined together
+        for (Database type : Database.values()) {
+            assertThat(Sets.difference(type.properties(), Database.Enterprise.properties()), is(empty()));
+        }
+        // but in terms of the default fields, it's like a drop-in replacement for the city database
+        // n.b. this is just a choice we decided to make here at Elastic
+        assertThat(Database.Enterprise.defaultProperties(), equalTo(Database.City.defaultProperties()));
+    }
 
     public void testCity() throws Exception {
         GeoIpProcessor processor = new GeoIpProcessor(
@@ -44,7 +66,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -58,10 +80,11 @@ public class GeoIpProcessorTests extends ESTestCase {
         assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo("8.8.8.8"));
         @SuppressWarnings("unchecked")
         Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
-        assertThat(geoData.size(), equalTo(6));
+        assertThat(geoData.size(), equalTo(7));
         assertThat(geoData.get("ip"), equalTo("8.8.8.8"));
         assertThat(geoData.get("country_iso_code"), equalTo("US"));
         assertThat(geoData.get("country_name"), equalTo("United States"));
+        assertThat(geoData.get("continent_code"), equalTo("NA"));
         assertThat(geoData.get("continent_name"), equalTo("North America"));
         assertThat(geoData.get("timezone"), equalTo("America/Chicago"));
         Map<String, Object> location = new HashMap<>();
@@ -78,7 +101,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             true,
             false,
             "filename"
@@ -100,12 +123,12 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             true,
             false,
             "filename"
         );
-        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.emptyMap());
+        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(random(), Map.of());
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         processor.execute(ingestDocument);
         assertIngestDocument(originalIngestDocument, ingestDocument);
@@ -119,7 +142,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -141,12 +164,12 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
         );
-        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.emptyMap());
+        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(random(), Map.of());
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         Exception exception = expectThrows(Exception.class, () -> processor.execute(ingestDocument));
         assertThat(exception.getMessage(), equalTo("field [source_field] not present as part of path [source_field]"));
@@ -160,7 +183,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -175,10 +198,11 @@ public class GeoIpProcessorTests extends ESTestCase {
         assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo(address));
         @SuppressWarnings("unchecked")
         Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
-        assertThat(geoData.size(), equalTo(9));
+        assertThat(geoData.size(), equalTo(10));
         assertThat(geoData.get("ip"), equalTo(address));
         assertThat(geoData.get("country_iso_code"), equalTo("US"));
         assertThat(geoData.get("country_name"), equalTo("United States"));
+        assertThat(geoData.get("continent_code"), equalTo("NA"));
         assertThat(geoData.get("continent_name"), equalTo("North America"));
         assertThat(geoData.get("region_iso_code"), equalTo("US-FL"));
         assertThat(geoData.get("region_name"), equalTo("Florida"));
@@ -198,7 +222,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -224,7 +248,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-Country.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -238,10 +262,11 @@ public class GeoIpProcessorTests extends ESTestCase {
         assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo("82.170.213.79"));
         @SuppressWarnings("unchecked")
         Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
-        assertThat(geoData.size(), equalTo(4));
+        assertThat(geoData.size(), equalTo(5));
         assertThat(geoData.get("ip"), equalTo("82.170.213.79"));
         assertThat(geoData.get("country_iso_code"), equalTo("NL"));
         assertThat(geoData.get("country_name"), equalTo("Netherlands"));
+        assertThat(geoData.get("continent_code"), equalTo("EU"));
         assertThat(geoData.get("continent_name"), equalTo("Europe"));
     }
 
@@ -253,7 +278,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-Country.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -280,7 +305,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-ASN.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -301,6 +326,182 @@ public class GeoIpProcessorTests extends ESTestCase {
         assertThat(geoData.get("network"), equalTo("82.168.0.0/14"));
     }
 
+    public void testAnonymmousIp() throws Exception {
+        String ip = "81.2.69.1";
+        GeoIpProcessor processor = new GeoIpProcessor(
+            randomAlphaOfLength(10),
+            null,
+            "source_field",
+            loader("/GeoIP2-Anonymous-IP-Test.mmdb"),
+            () -> true,
+            "target_field",
+            ALL_PROPERTIES,
+            false,
+            false,
+            "filename"
+        );
+
+        Map<String, Object> document = new HashMap<>();
+        document.put("source_field", ip);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        processor.execute(ingestDocument);
+
+        assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo(ip));
+        @SuppressWarnings("unchecked")
+        Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
+        assertThat(geoData.size(), equalTo(7));
+        assertThat(geoData.get("ip"), equalTo(ip));
+        assertThat(geoData.get("hosting_provider"), equalTo(true));
+        assertThat(geoData.get("tor_exit_node"), equalTo(true));
+        assertThat(geoData.get("anonymous_vpn"), equalTo(true));
+        assertThat(geoData.get("anonymous"), equalTo(true));
+        assertThat(geoData.get("public_proxy"), equalTo(true));
+        assertThat(geoData.get("residential_proxy"), equalTo(true));
+    }
+
+    public void testConnectionType() throws Exception {
+        String ip = "214.78.120.5";
+        GeoIpProcessor processor = new GeoIpProcessor(
+            randomAlphaOfLength(10),
+            null,
+            "source_field",
+            loader("/GeoIP2-Connection-Type-Test.mmdb"),
+            () -> true,
+            "target_field",
+            ALL_PROPERTIES,
+            false,
+            false,
+            "filename"
+        );
+
+        Map<String, Object> document = new HashMap<>();
+        document.put("source_field", ip);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        processor.execute(ingestDocument);
+
+        assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo(ip));
+        @SuppressWarnings("unchecked")
+        Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
+        assertThat(geoData.size(), equalTo(2));
+        assertThat(geoData.get("ip"), equalTo(ip));
+        assertThat(geoData.get("connection_type"), equalTo("Satellite"));
+    }
+
+    public void testDomain() throws Exception {
+        String ip = "69.219.64.2";
+        GeoIpProcessor processor = new GeoIpProcessor(
+            randomAlphaOfLength(10),
+            null,
+            "source_field",
+            loader("/GeoIP2-Domain-Test.mmdb"),
+            () -> true,
+            "target_field",
+            ALL_PROPERTIES,
+            false,
+            false,
+            "filename"
+        );
+
+        Map<String, Object> document = new HashMap<>();
+        document.put("source_field", ip);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        processor.execute(ingestDocument);
+
+        assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo(ip));
+        @SuppressWarnings("unchecked")
+        Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
+        assertThat(geoData.size(), equalTo(2));
+        assertThat(geoData.get("ip"), equalTo(ip));
+        assertThat(geoData.get("domain"), equalTo("ameritech.net"));
+    }
+
+    public void testEnterprise() throws Exception {
+        String ip = "74.209.24.4";
+        GeoIpProcessor processor = new GeoIpProcessor(
+            randomAlphaOfLength(10),
+            null,
+            "source_field",
+            loader("/GeoIP2-Enterprise-Test.mmdb"),
+            () -> true,
+            "target_field",
+            ALL_PROPERTIES,
+            false,
+            false,
+            "filename"
+        );
+
+        Map<String, Object> document = new HashMap<>();
+        document.put("source_field", ip);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        processor.execute(ingestDocument);
+
+        assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo(ip));
+        @SuppressWarnings("unchecked")
+        Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
+        assertThat(geoData.size(), equalTo(24));
+        assertThat(geoData.get("ip"), equalTo(ip));
+        assertThat(geoData.get("country_iso_code"), equalTo("US"));
+        assertThat(geoData.get("country_name"), equalTo("United States"));
+        assertThat(geoData.get("continent_code"), equalTo("NA"));
+        assertThat(geoData.get("continent_name"), equalTo("North America"));
+        assertThat(geoData.get("region_iso_code"), equalTo("US-NY"));
+        assertThat(geoData.get("region_name"), equalTo("New York"));
+        assertThat(geoData.get("city_name"), equalTo("Chatham"));
+        assertThat(geoData.get("timezone"), equalTo("America/New_York"));
+        Map<String, Object> location = new HashMap<>();
+        location.put("lat", 42.3478);
+        location.put("lon", -73.5549);
+        assertThat(geoData.get("location"), equalTo(location));
+        assertThat(geoData.get("asn"), equalTo(14671L));
+        assertThat(geoData.get("organization_name"), equalTo("FairPoint Communications"));
+        assertThat(geoData.get("network"), equalTo("74.209.16.0/20"));
+        assertThat(geoData.get("hosting_provider"), equalTo(false));
+        assertThat(geoData.get("tor_exit_node"), equalTo(false));
+        assertThat(geoData.get("anonymous_vpn"), equalTo(false));
+        assertThat(geoData.get("anonymous"), equalTo(false));
+        assertThat(geoData.get("public_proxy"), equalTo(false));
+        assertThat(geoData.get("residential_proxy"), equalTo(false));
+        assertThat(geoData.get("domain"), equalTo("frpt.net"));
+        assertThat(geoData.get("isp"), equalTo("Fairpoint Communications"));
+        assertThat(geoData.get("isp_organization_name"), equalTo("Fairpoint Communications"));
+        assertThat(geoData.get("user_type"), equalTo("residential"));
+        assertThat(geoData.get("connection_type"), equalTo("Cable/DSL"));
+    }
+
+    public void testIsp() throws Exception {
+        String ip = "149.101.100.1";
+        GeoIpProcessor processor = new GeoIpProcessor(
+            randomAlphaOfLength(10),
+            null,
+            "source_field",
+            loader("/GeoIP2-ISP-Test.mmdb"),
+            () -> true,
+            "target_field",
+            ALL_PROPERTIES,
+            false,
+            false,
+            "filename"
+        );
+
+        Map<String, Object> document = new HashMap<>();
+        document.put("source_field", ip);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        processor.execute(ingestDocument);
+
+        assertThat(ingestDocument.getSourceAndMetadata().get("source_field"), equalTo(ip));
+        @SuppressWarnings("unchecked")
+        Map<String, Object> geoData = (Map<String, Object>) ingestDocument.getSourceAndMetadata().get("target_field");
+        assertThat(geoData.size(), equalTo(8));
+        assertThat(geoData.get("ip"), equalTo(ip));
+        assertThat(geoData.get("asn"), equalTo(6167L));
+        assertThat(geoData.get("organization_name"), equalTo("CELLCO-PART"));
+        assertThat(geoData.get("network"), equalTo("149.101.100.0/28"));
+        assertThat(geoData.get("isp"), equalTo("Verizon Wireless"));
+        assertThat(geoData.get("isp_organization_name"), equalTo("Verizon Wireless"));
+        assertThat(geoData.get("mobile_network_code"), equalTo("004"));
+        assertThat(geoData.get("mobile_country_code"), equalTo("310"));
+    }
+
     public void testAddressIsNotInTheDatabase() throws Exception {
         GeoIpProcessor processor = new GeoIpProcessor(
             randomAlphaOfLength(10),
@@ -309,7 +510,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -333,7 +534,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
@@ -354,14 +555,14 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
         );
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("8.8.8.8", "82.171.64.0"));
+        document.put("source_field", List.of("8.8.8.8", "82.171.64.0"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -384,14 +585,14 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
         );
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("8.8.8.8", "127.0.0.1"));
+        document.put("source_field", List.of("8.8.8.8", "127.0.0.1"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -414,14 +615,14 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "filename"
         );
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("127.0.0.1", "127.0.0.1"));
+        document.put("source_field", List.of("127.0.0.1", "127.0.0.1"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -434,10 +635,10 @@ public class GeoIpProcessorTests extends ESTestCase {
         GeoIpProcessor processor = new GeoIpProcessor(randomAlphaOfLength(10), null, "source_field", () -> {
             loader.preLookup();
             return loader;
-        }, () -> true, "target_field", EnumSet.allOf(GeoIpProcessor.Property.class), false, false, "filename");
+        }, () -> true, "target_field", ALL_PROPERTIES, false, false, "filename");
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("8.8.8.8", "82.171.64.0"));
+        document.put("source_field", List.of("8.8.8.8", "82.171.64.0"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -465,14 +666,14 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             true,
             "filename"
         );
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("8.8.8.8", "127.0.0.1"));
+        document.put("source_field", List.of("8.8.8.8", "127.0.0.1"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -493,14 +694,14 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             true,
             "filename"
         );
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("127.0.0.1", "127.0.0.2"));
+        document.put("source_field", List.of("127.0.0.1", "127.0.0.2"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -515,14 +716,14 @@ public class GeoIpProcessorTests extends ESTestCase {
             loader("/GeoLite2-City.mmdb"),
             () -> false,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             true,
             "filename"
         );
 
         Map<String, Object> document = new HashMap<>();
-        document.put("source_field", Arrays.asList("127.0.0.1", "127.0.0.2"));
+        document.put("source_field", List.of("127.0.0.1", "127.0.0.2"));
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         processor.execute(ingestDocument);
 
@@ -538,7 +739,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             () -> null,
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             false,
             false,
             "GeoLite2-City"
@@ -561,7 +762,7 @@ public class GeoIpProcessorTests extends ESTestCase {
             () -> null,
             () -> true,
             "target_field",
-            EnumSet.allOf(GeoIpProcessor.Property.class),
+            ALL_PROPERTIES,
             true,
             false,
             "GeoLite2-City"
